--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <div class="list">
 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/40_JIuTpoB_IIuBa/180" alt="40 Литров Пива">
+                <img src="head/40_JIuTpoB_IIuBa.png" alt="40 Литров Пива">
                 <p>40 Литров Пива</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@40_JIuTpoB_IIuBa" target="_blank">Ютуб</a> | 
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Aklim_ka/180" alt="Аклимка">
+                <img src="head/Aklim_ka.png" alt="Аклимка">
                 <p>Аклимка</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@aklim_ka6539" target="_blank">Ютуб</a> | 
@@ -350,7 +350,7 @@
                 </div>
             </div>
             <div class="participant">
-                <img src="https://api.mcheads.org/head/MrBeezz/180" alt="Бизз">
+                <img src="head/MrBeezz.png" alt="Бизз">
                 <p>Бизз</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@mrbeezz" target="_blank">Ютуб</a> | 
@@ -358,7 +358,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/VacMakac/180" alt="ВакМакак">
+                <img src="head/VacMakac.png" alt="ВакМакак">
                 <p>ВакМакак</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@VacMakac" target="_blank">Ютуб</a> | 
@@ -366,7 +366,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/winx2281337/180" alt="Винкс">
+                <img src="head/winx2281337.png" alt="Винкс">
                 <p>Винкс</p>
                 <div class="links">
                     <a href="https://www.youtube.com/channel/UCLrmMvbWXsdI96pKq3NkJ0Q" target="_blank">Ютуб</a> | 
@@ -374,7 +374,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/VIPSSS/180" alt="Випс">
+                <img src="head/VIPSSS.png" alt="Випс">
                 <p>Випс</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@VIPSSS" target="_blank">Ютуб</a> | 
@@ -382,7 +382,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/GoverNed_/180" alt="ГоверНед">
+                <img src="head/GoverNed_.png" alt="ГоверНед">
                 <p>ГоверНед</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@governed_" target="_blank">Ютуб</a> | 
@@ -390,7 +390,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Zmeec/180" alt="Змец">
+                <img src="head/Zmeec.png" alt="Змец">
                 <p>Змец</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@Zmeec" target="_blank">Ютуб</a> | 
@@ -398,7 +398,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Kavkin/180" alt="Кавкин">
+                <img src="head/Kavkin.png" alt="Кавкин">
                 <p>Кавкин</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@Kavkin" target="_blank">Ютуб</a> | 
@@ -406,7 +406,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Kluv_v/180" alt="Клюв">
+                <img src="head/Kluv_v.png" alt="Клюв">
                 <p>Клюв</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@kluv_v" target="_blank">Ютуб</a> | 
@@ -414,7 +414,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/MagmustX/180" alt="Магмуст">
+                <img src="head/MagmustX.png" alt="Магмуст">
                 <p>Магмуст</p>
                 <div class="links">
                     <a href="https://www.youtube.com/channel/UCRPLlh57xhvm8sb94-aggEA" target="_blank">Ютуб</a> | 
@@ -422,7 +422,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Martscomm/180" alt="МартсКом">
+                <img src="head/Martscomm.png" alt="МартсКом">
                 <p>МартсКом</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@martscomm" target="_blank">Ютуб</a> | 
@@ -430,7 +430,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/M_Mafinev/180" alt="Мафинев">
+                <img src="head/M_Mafinev.png" alt="Мафинев">
                 <p>Мафинев</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@Mafinev" target="_blank">Ютуб</a> | 
@@ -438,7 +438,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/INaggy/180" alt="Нагги">
+                <img src="head/INaggy.png" alt="Нагги">
                 <p>Нагги</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@goldnaggets" target="_blank">Ютуб</a> | 
@@ -446,7 +446,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Nagibayka/180" alt="Нагибайка">
+                <img src="head/Nagibayka.png" alt="Нагибайка">
                 <p>Нагибайка</p>
                 <div class="links">
                     <a href="https://www.youtube.com/Nagibayka" target="_blank">Ютуб</a> | 
@@ -454,7 +454,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/KadotaNukles/180" alt="Наклс">
+                <img src="head/KadotaNukles.png" alt="Наклс">
                 <p>Наклс</p>
                 <div class="links">
                     <a href="https://www.youtube.com/channel/UCKjnjmgurwhkqgNiPSQ4cZg" target="_blank">Ютуб</a> | 
@@ -462,7 +462,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Novikony/180" alt="Новикони">
+                <img src="head/Novikony.png" alt="Новикони">
                 <p>Новикони</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@novikony" target="_blank">Ютуб</a> | 
@@ -470,7 +470,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/OlyaChesapik/180" alt="Оля Чесапик">
+                <img src="head/OlyaChesapik.png" alt="Оля Чесапик">
                 <p>Оля Чесапик</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@olyachesapikgames" target="_blank">Ютуб</a> | 
@@ -478,7 +478,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Optimist_Ezz/180" alt="Опти">
+                <img src="head/Optimist_Ezz.png" alt="Опти">
                 <p>Опти</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@OptimistEzz" target="_blank">Ютуб</a> | 
@@ -486,7 +486,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/MrPupe/180" alt="Mr Пупи">
+                <img src="head/MrPupe.png" alt="Mr Пупи">
                 <p>Mr Пупи</p>
                 <div class="links">
                     <a href="https://www.youtube.com/c/MrPupeWhy" target="_blank">Ютуб</a> | 
@@ -494,7 +494,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/PyHeK/180" alt="Руник">
+                <img src="head/PyHeK.png" alt="Руник">
                 <p>Руник</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@PyHeK" target="_blank">Ютуб</a> | 
@@ -502,7 +502,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Sevetyan/180" alt="Севетян">
+                <img src="head/Sevetyan.png" alt="Севетян">
                 <p>Севетян</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@Sevetyan" target="_blank">Ютуб</a> | 
@@ -510,7 +510,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/SmmAssH/180" alt="Смэш">
+                <img src="head/SmmAssH.png" alt="Смэш">
                 <p>Смэш</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@SmmAssH" target="_blank">Ютуб</a> | 
@@ -518,7 +518,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/hrel_mc/180" alt="Хрел">
+                <img src="head/hrel_mc.png" alt="Хрел">
                 <p>Хрел</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@hrel" target="_blank">Ютуб</a> | 
@@ -526,7 +526,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Fereden/180" alt="Фереден">
+                <img src="head/Fereden.png" alt="Фереден">
                 <p>Фереден</p>
                 <div class="links">
                     <a href="https://www.youtube.com/fereden" target="_blank">Ютуб</a> | 
@@ -534,7 +534,7 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/MrsChiba/180" alt="Чиба">
+                <img src="head/MrsChiba.png" alt="Чиба">
                 <p>Чиба</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@MrsChiba" target="_blank">Ютуб</a> | 
@@ -542,14 +542,14 @@
                 </div>
             </div> 
             <div class="participant">
-                <img src="https://api.mcheads.org/head/Eboni_Inobe/180" alt="Эбони">
+                <img src="head/Eboni_Inobe.png" alt="Эбони">
                 <p>Эбони</p>
                 <div class="links">
                     <a href="https://www.youtube.com/@Eboni_Inobe" target="_blank">Ютуб</a> | 
                     <a href="https://www.twitch.tv/eboni_inobe" target="_blank">Твич</a>
                 </div>
             </div> 
-
+            
         </div>
     </div>
     <div class="background"></div>
