--- a/index.html
+++ b/index.html
@@ -302,6 +302,15 @@
     </style>
 </head>
 <body>
+    /* ... */
+    /* — Ты чувствуешь это? Время близко... — */
+    /* — Да, мы снова должны открыть дату. — */
+    /* — Они даже не подозревают, что это значит. — */
+    /* — И не должны. Мы только проводники. — */
+    /* — Но почему именно эта дата? Что она скрывает? — */
+    /* — Не задавай вопросов. Откроем и исчезнем, как всегда. — */
+    /* ... */
+    
     <div class="header" id="header">
         ??.0?.2025 - ??:?? 👀
     </div>    
