--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <img src="head/MrBeezz.png" alt="Бизз">
                 <p>Бизз</p>
                 <div class="links">
-                    <a href="https://www.youtube.com/@mrbeezz" target="_blank">Ютуб</a> | 
+                    <a href="https://www.youtube.com/@%D0%91%D0%B8%D0%B7%D0%B7" target="_blank">Ютуб</a> | 
                     <a href="https://www.twitch.tv/mr_beezz" target="_blank">Твич</a>
                 </div>
             </div> 
