--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                 <img src="head/MrsChiba.png" alt="Чиба">
                 <p>Чиба</p>
                 <div class="links">
-                    <a href="https://www.youtube.com/@MrsChiba" target="_blank">Ютуб</a> | 
-                    <a href="https://www.twitch.tv/mrsschiba" target="_blank">Твич</a>
+                    <a href="https://www.youtube.com/@MsChiba" target="_blank">Ютуб</a> | 
+                    <a href="https://www.twitch.tv/msschiba" target="_blank">Твич</a>
                 </div>
             </div> 
             <div class="participant">
