--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <img src="head/MrBeezz.png" alt="Бизз">
                 <p>Бизз</p>
                 <div class="links">
-                    <a href="https://www.youtube.com/@mrbeezz" target="_blank">Ютуб</a> | 
+                    <a href="https://www.youtube.com/@%D0%91%D0%B8%D0%B7%D0%B7" target="_blank">Ютуб</a> | 
                     <a href="https://www.twitch.tv/mr_beezz" target="_blank">Твич</a>
                 </div>
             </div> 
@@ -533,8 +533,8 @@
                 <img src="head/MrsChiba.png" alt="Чиба">
                 <p>Чиба</p>
                 <div class="links">
-                    <a href="https://www.youtube.com/@MrsChiba" target="_blank">Ютуб</a> | 
-                    <a href="https://www.twitch.tv/mrsschiba" target="_blank">Твич</a>
+                    <a href="https://www.youtube.com/@MsChiba" target="_blank">Ютуб</a> | 
+                    <a href="https://www.twitch.tv/msschiba" target="_blank">Твич</a>
                 </div>
             </div> 
             <div class="participant">
