--- a/video.html
+++ b/video.html
@@ -86,30 +86,33 @@
             }
         }
 
-        /* Стилизация скроллбара для веб-кита (Chrome, Edge, Safari) */
         ::-webkit-scrollbar {
-            width: 12px; /* Ширина скроллбара */
+            width: 12px;
         }
 
         ::-webkit-scrollbar-track {
-            background: #1a1a1a; /* Цвет фона полосы прокрутки */
-            border-radius: 10px; /* Закругление трека */
+            background: #1a1a1a;
+            border-radius: 10px;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: linear-gradient(45deg, #ffffff, #ffffff); /* Градиентная полоса */
-            border-radius: 10px; /* Закругление бегунка */
-            border: 2px solid #000; /* Промежуток между треком и бегунком */
+            background: linear-gradient(45deg, #ffffff, #ffffff);
+            border-radius: 10px;
+            border: 2px solid #000;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: linear-gradient(45deg, #ffffff, #ffffff); /* Цвет при наведении */
+            background: linear-gradient(45deg, #ffffff, #ffffff)
         }
 
-        /* Стили для Firefox */
         body {
-            scrollbar-width: thin; /* Узкий скроллбар */
-            scrollbar-color: #ffffff #1a1a1a; /* Цвет бегунка и фона */
+            scrollbar-width: thin;
+            scrollbar-color: #ffffff #1a1a1a;
+        }
+
+        ::selection {
+            background: #fff;
+            color: #000;
         }
     </style>
 </head>
