--- a/index.html
+++ b/index.html
@@ -298,7 +298,10 @@
             }
         }
 
-
+        ::selection {
+            background: #fff;
+            color: #000;
+        }
     </style>
 </head>
 <body>
@@ -564,6 +567,6 @@
                 header.style.top = '20px';
             }, 300);
         });
-    </script>         
+    </script>        
 </body>
 </html>
