--- a/index.html
+++ b/index.html
@@ -866,9 +866,8 @@
                 <ul>
                     <li>Имеет девять сердец здоровья</li>
                     <li>Высота прыжка больше</li>
-                    <li>Отсутствует урон от падения</li>
+                    <li>Режим «Бешенства» дает силу и скорость</li>
                     <li>Питается только мясом</li>
-                    <li>Наносит больше урона при ударе ночью</li>
                 </ul>
             </div>
             <div class="participant">
@@ -985,7 +984,7 @@
                     <li>Может «собирать пыльцу» с цветов, заполняет ей особую шкалу мёда и получает при этом эффект регенерации</li>
                     <li>Умеет летать, пока шкала мёда заполнена. Способность блокируется во время дождя</li>
                     <li>Может собирать мёд в бутылку</li>
-                    <li>Пчёлы не агрятся, если их ударить, а из улья можно безопасно забрать мёд</li>
+                    <li>Можно безопасно забрирать мёд из улья</li>
                 </ul>
             </div>
             <div class="participant">
