--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
                     <li>Может «собирать пыльцу» с цветов, заполняет ей особую шкалу мёда и получает при этом эффект регенерации</li>
                     <li>Умеет летать, пока шкала мёда заполнена. Способность блокируется во время дождя</li>
                     <li>Может собирать мёд в бутылку</li>
-                    <li>Можно безопасно забрирать мёд из улья</li>
+                    <li>Можно безопасно забирать мёд из улья</li>
                 </ul>
             </div>
             <div class="participant">
