--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             top: -100px;
             left: 50%;
             transform: translateX(-50%);
-            width: 30%;
+            width: 33%;
             max-width: 800px;
             background-color: rgba(25, 25, 25, 0.95);
             color: white;
@@ -471,7 +471,7 @@
 </head>
 <body>
     <div class="header" id="header">
-        Открыт набор на сервер через заявки.<a href="https://t.me/core_squad/400" target="_blank">Подробнее</a>
+        Приём заявок завершен, ожидайте результатов.<a href="https://t.me/core_squad/454" target="_blank">Подробнее</a>
     </div>    
 
     <div class="fullscreen">
@@ -829,12 +829,12 @@
 
     <div class="news">
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/2goDkGCvnJM" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/G7Naqi4Nhss" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="text">
             <h2>Новости</h2>
-            <p>Второй выпуск новостей по КОРУ! Теперь на канале Кор будут выходить новостные выпуски о том, что произошло на нашем сервере за 2 недели (100 дней). Основными участниками новостей будут Опти, Новикони и конечно же Випс <br> <br>Cмотрите нас на официальном канале Кор, у нас всегда интересно!</p>
-            <button onclick="window.open('https://youtu.be/2goDkGCvnJM', '_blank')">Смотреть новый выпуск</button>
+            <p>Выпуск новостей номер один, Теперь на канале Кор будут выходить новостные выпуски о том, что произошло на нашем сервере за 2 недели (100 дней). Основными участниками новостей будут Опти, Новикони и конечно же Випс <br> <br>Cмотрите нас на официальном канале Кор, у нас всегда интересно!</p>
+            <button onclick="window.open('https://youtu.be/G7Naqi4Nhss', '_blank')">Смотреть первый выпуск</button>
             <button onclick="window.open('https://www.youtube.com/playlist?list=PL7ZfbhFzL0b9HQuHjiC6mKQWUh6-5t56Z', '_blank')">Все выпуски</button>
         </div>
     </div>     
