--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .fullscreen .text button:hover {
@@ -112,6 +113,7 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .description .text button:hover {
@@ -253,6 +255,7 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .news .text button:hover {
@@ -824,12 +827,12 @@
 
     <div class="news">
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/2goDkGCvnJM" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/G7Naqi4Nhss" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="text">
             <h2>Новости</h2>
-            <p>Второй выпуск новостей по КОРУ! Теперь на канале Кор будут выходить новостные выпуски о том, что произошло на нашем сервере за 2 недели (100 дней). Основными участниками новостей будут Опти, Новикони и конечно же Випс <br> <br>Cмотрите нас на официальном канале Кор, у нас всегда интересно!</p>
-            <button onclick="window.open('https://youtu.be/G7Naqi4Nhss', '_blank')">Смотреть новый выпуск</button>
+            <p>Выпуск новостей номер один, Теперь на канале Кор будут выходить новостные выпуски о том, что произошло на нашем сервере за 2 недели (100 дней). Основными участниками новостей будут Опти, Новикони и конечно же Випс <br> <br>Cмотрите нас на официальном канале Кор, у нас всегда интересно!</p>
+            <button onclick="window.open('https://youtu.be/G7Naqi4Nhss', '_blank')">Смотреть первый выпуск</button>
             <button onclick="window.open('https://www.youtube.com/playlist?list=PL7ZfbhFzL0b9HQuHjiC6mKQWUh6-5t56Z', '_blank')">Все выпуски</button>
         </div>
     </div>     
